[gd_scene load_steps=9 format=3 uid="uid://dmyaegou28jxp"]

[ext_resource type="Script" path="res://menu.gd" id="1_c6840"]
[ext_resource type="Texture2D" uid="uid://cdwet80eq6855" path="res://bsas-noche-eterna.webp" id="1_yxe7r"]
[ext_resource type="Texture2D" uid="uid://budt0fg4tvw73" path="res://assets/ui/Keyboard Letters and Symbols.png" id="3_05d8a"]
[ext_resource type="FontFile" uid="uid://gxmbr3xcsrre" path="res://assets/Deadfall-Regular.ttf" id="3_vj7u7"]
[ext_resource type="Texture2D" uid="uid://tta5jdsirrg5" path="res://assets/ui/Keyboard Extras.png" id="4_tn41y"]
[ext_resource type="Texture2D" uid="uid://bor5stunx12a2" path="res://assets/ui/mouse.png" id="5_vh1ot"]
[ext_resource type="PackedScene" uid="uid://cfwut0cwovhpv" path="res://options.tscn" id="7_3qh0w"]
[ext_resource type="AudioStream" uid="uid://n31wou7l7qf2" path="res://sounds/menu-v3.ogg" id="8_8krdc"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_c6840")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -50.0
offset_right = 184.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_yxe7r")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -265.0
offset_right = 355.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 66
text = "BUENOS AIRES:
NOCHE ETERNA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartBtn" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -13.0
offset_right = 156.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 38
text = "Start"

[node name="ControlsBtn" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 80.0
offset_right = 156.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 38
text = "Controls"

[node name="OptionsBtn" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 166.0
offset_right = 156.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 38
text = "Options"

[node name="eXIT" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 249.0
offset_right = 156.0
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 38
text = "EXIT"

[node name="ControlsBG" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.811765)

[node name="Controls" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.5
offset_top = -321.0
offset_right = 397.5
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 89.176
offset_top = -254.0
offset_right = 262.176
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 28
text = "Caminar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 89.176
offset_top = -184.0
offset_right = 262.176
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 28
text = "Correr"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 17.784
offset_top = -118.0
offset_right = 321.784
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 28
text = "Alternar inventario"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 44.176
offset_top = -48.0
offset_right = 296.176
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 28
text = "Agarrar Items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.892
offset_top = 16.0
offset_right = 305.892
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 28
text = "Alternar linterna"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 56.392
offset_top = 86.0
offset_right = 308.392
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 28
text = "Opciones"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.392
offset_top = 151.0
offset_right = 322.392
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 28
text = "Golpear/Usar Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="a" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(169.372, 91)
scale = Vector2(5.087, 4)
texture = ExtResource("3_05d8a")
hframes = 8
vframes = 14
frame = 16

[node name="s" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(323.372, 92)
scale = Vector2(5.087, 4)
texture = ExtResource("3_05d8a")
hframes = 8
vframes = 14
frame = 34

[node name="d" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(403.372, 93)
scale = Vector2(5.087, 4)
texture = ExtResource("3_05d8a")
hframes = 8
vframes = 14
frame = 19

[node name="d3" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(178.892, 301)
scale = Vector2(5.087, 4)
texture = ExtResource("3_05d8a")
hframes = 8
vframes = 14
frame = 20

[node name="d4" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(177.892, 367)
scale = Vector2(5.087, 4)
texture = ExtResource("3_05d8a")
hframes = 8
vframes = 14
frame = 21

[node name="d2" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(323.676, 238)
scale = Vector2(5.087, 4)
texture = ExtResource("3_05d8a")
hframes = 8
vframes = 14
frame = 24

[node name="w" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(247.372, 93)
scale = Vector2(5.087, 4)
texture = ExtResource("3_05d8a")
hframes = 8
vframes = 14
frame = 38

[node name="shift" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(207.676, 169)
scale = Vector2(5.087, 4)
texture = ExtResource("4_tn41y")
hframes = 4
vframes = 8
frame = 4

[node name="shift2" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(195.284, 238)
scale = Vector2(5.087, 4)
texture = ExtResource("4_tn41y")
hframes = 4
vframes = 8

[node name="shift3" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(182.892, 431)
scale = Vector2(5.087, 4)
texture = ExtResource("4_tn41y")
hframes = 4
vframes = 8
frame = 1

[node name="Button" type="Button" parent="CanvasLayer/Controls"]
layout_mode = 0
offset_left = 328.5
offset_top = 549.0
offset_right = 485.5
offset_bottom = 610.0
theme_override_fonts/font = ExtResource("3_vj7u7")
theme_override_font_sizes/font_size = 24
text = "Cerrar"

[node name="Mouise" type="Sprite2D" parent="CanvasLayer/Controls"]
position = Vector2(175.892, 503)
scale = Vector2(1.70898, 1.70898)
texture = ExtResource("5_vh1ot")

[node name="Options" parent="CanvasLayer" instance=ExtResource("7_3qh0w")]
visible = false
visibility_layer = 2

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("8_8krdc")
pitch_scale = 0.8
bus = &"Musica"

[connection signal="pressed" from="CanvasLayer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlsBtn" to="." method="_on_controls_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/eXIT" to="." method="_on_e_xit_pressed"]
[connection signal="pressed" from="CanvasLayer/Controls/Button" to="." method="_on_close_controls_button_pressed"]
